Fixed issue where resources did not load when running JAR